# duckdb-version-manager

./: .gitignore  LICENSE  README.md  compile.sh  go.mod  go.sum  install.ps1  install.sh  install_local.sh  main.go  pyproject.toml
.github/workflows/: release.yml  test.yml  update-versions.yml
api/: client.go  new.go  utils.go
client/: client.go  factory.go  utils.go
cmd/: default.go  init.go  install.go  list.go  main.go  release.go  root.go  run.go  uninstall.go  uninstall_self.go  updateSelf.go  update_self.go  use.go
cmd/list/: local.go  remote.go
config/: config.go  setup.go
manager/: config.go  manager.go  new.go  resolve.go
manager/migrations/: migrations.go  run.go  v0.3.0.go
models/: architecture.go  config.go  duckdb_release.go  local_config.go  platforms.go  tuple.go
scripts/: crawl_releases.py  extract_releases.py  models.py  nightly.py
scripts/test/: duck_vm.py  e2e.py
stacktrace/: new.go  trackable_error.go
test/: duck_vm.py  e2e.py
tests/: duck_vm.py  e2e.py
utils/: default.go  device.go  download.go  env.go  exit.go  file.go  install.go  list.go  local_versions.go  map.go  transformers.go  versions.go  zip_extraction.go
validate-version/: validate.go
versions/: latest-vm.json  versions.json
versions/tags/: nightly.json  v0.1.9.json  v0.10.0.json  v0.10.1.json  v0.10.2.json  v0.10.3.json  v0.2.0.json  v0.2.1.json  v0.2.2.json  v0.2.3.json  v0.2.4.json  v0.2.5.json  v0.2.6.json  v0.2.7.json  v0.2.8.json  v0.2.9.json  v0.3.0.json  v0.3.1.json  v0.3.2.json  v0.3.3.json  v0.3.4.json  v0.4.0.json  v0.5.0.json  v0.5.1.json  (+32 more)
